exports[`AppContainer can edit task that is complete 1`] = `
<div>
  <header
    id="header">
    <h1>
      nouns
    </h1>
    <input
      autoFocus={true}
      id="new-noun"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="What needs to be done?"
      value="" />
  </header>
  <section
    id="main">
    <input
      checked=""
      id="toggle-all"
      onChange={[Function]}
      type="checkbox" />
    <label
      htmlFor="toggle-all">
      Mark all as complete
    </label>
    <ul
      id="noun-list">
      <li
        className="">
        <div
          className="view">
          <input
            checked={false}
            className="toggle"
            onChange={[Function]}
            type="checkbox" />
          <label
            onDoubleClick={[Function]}>
            test3
          </label>
          <button
            className="destroy"
            onClick={[Function]} />
        </div>
      </li>
      <li
        className="completed">
        <div
          className="view">
          <input
            checked={true}
            className="toggle"
            onChange={[Function]}
            type="checkbox" />
          <label
            onDoubleClick={[Function]}>
            test2
          </label>
          <button
            className="destroy"
            onClick={[Function]} />
        </div>
      </li>
      <li
        className="completed editing">
        <div
          className="view">
          <input
            checked={true}
            className="toggle"
            onChange={[Function]}
            type="checkbox" />
          <label
            onDoubleClick={[Function]}>
            test1
          </label>
          <button
            className="destroy"
            onClick={[Function]} />
        </div>
        <input
          autoFocus={true}
          className="edit"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyDown={[Function]}
          value="test1" />
      </li>
      <li
        className="">
        <div
          className="view">
          <input
            checked={false}
            className="toggle"
            onChange={[Function]}
            type="checkbox" />
          <label
            onDoubleClick={[Function]}>
            test0
          </label>
          <button
            className="destroy"
            onClick={[Function]} />
        </div>
      </li>
    </ul>
  </section>
  <footer
    id="footer">
    <span
      id="noun-count">
      <strong>
        2
      </strong>
       items left
    </span>
    <button
      id="clear-completed"
      onClick={undefined}>
      Clear completed (
      2
      )
    </button>
  </footer>
</div>
`;

exports[`AppContainer can edit task that is not complete 1`] = `
<div>
  <header
    id="header">
    <h1>
      nouns
    </h1>
    <input
      autoFocus={true}
      id="new-noun"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="What needs to be done?"
      value="" />
  </header>
  <section
    id="main">
    <input
      checked=""
      id="toggle-all"
      onChange={[Function]}
      type="checkbox" />
    <label
      htmlFor="toggle-all">
      Mark all as complete
    </label>
    <ul
      id="noun-list">
      <li
        className="">
        <div
          className="view">
          <input
            checked={false}
            className="toggle"
            onChange={[Function]}
            type="checkbox" />
          <label
            onDoubleClick={[Function]}>
            test3
          </label>
          <button
            className="destroy"
            onClick={[Function]} />
        </div>
      </li>
      <li
        className="completed">
        <div
          className="view">
          <input
            checked={true}
            className="toggle"
            onChange={[Function]}
            type="checkbox" />
          <label
            onDoubleClick={[Function]}>
            test2
          </label>
          <button
            className="destroy"
            onClick={[Function]} />
        </div>
      </li>
      <li
        className="completed">
        <div
          className="view">
          <input
            checked={true}
            className="toggle"
            onChange={[Function]}
            type="checkbox" />
          <label
            onDoubleClick={[Function]}>
            test1
          </label>
          <button
            className="destroy"
            onClick={[Function]} />
        </div>
      </li>
      <li
        className="editing">
        <div
          className="view">
          <input
            checked={false}
            className="toggle"
            onChange={[Function]}
            type="checkbox" />
          <label
            onDoubleClick={[Function]}>
            test0
          </label>
          <button
            className="destroy"
            onClick={[Function]} />
        </div>
        <input
          autoFocus={true}
          className="edit"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyDown={[Function]}
          value="test0" />
      </li>
    </ul>
  </section>
  <footer
    id="footer">
    <span
      id="noun-count">
      <strong>
        2
      </strong>
       items left
    </span>
    <button
      id="clear-completed"
      onClick={undefined}>
      Clear completed (
      2
      )
    </button>
  </footer>
</div>
`;

exports[`AppContainer renders draft with no nouns 1`] = `
<div>
  <header
    id="header">
    <h1>
      nouns
    </h1>
    <input
      autoFocus={true}
      id="new-noun"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="What needs to be done?"
      value="test0" />
  </header>
</div>
`;

exports[`AppContainer renders draft with nouns 1`] = `
<div>
  <header
    id="header">
    <h1>
      nouns
    </h1>
    <input
      autoFocus={true}
      id="new-noun"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="What needs to be done?"
      value="test1" />
  </header>
  <section
    id="main">
    <input
      checked=""
      id="toggle-all"
      onChange={[Function]}
      type="checkbox" />
    <label
      htmlFor="toggle-all">
      Mark all as complete
    </label>
    <ul
      id="noun-list">
      <li
        className="">
        <div
          className="view">
          <input
            checked={false}
            className="toggle"
            onChange={[Function]}
            type="checkbox" />
          <label
            onDoubleClick={[Function]}>
            test0
          </label>
          <button
            className="destroy"
            onClick={[Function]} />
        </div>
      </li>
    </ul>
  </section>
  <footer
    id="footer">
    <span
      id="noun-count">
      <strong>
        1
      </strong>
       item left
    </span>
  </footer>
</div>
`;

exports[`AppContainer renders draft with nouns while editing 1`] = `
<div>
  <header
    id="header">
    <h1>
      nouns
    </h1>
    <input
      autoFocus={true}
      id="new-noun"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="What needs to be done?"
      value="test1 edit" />
  </header>
  <section
    id="main">
    <input
      checked=""
      id="toggle-all"
      onChange={[Function]}
      type="checkbox" />
    <label
      htmlFor="toggle-all">
      Mark all as complete
    </label>
    <ul
      id="noun-list">
      <li
        className="editing">
        <div
          className="view">
          <input
            checked={false}
            className="toggle"
            onChange={[Function]}
            type="checkbox" />
          <label
            onDoubleClick={[Function]}>
            test1
          </label>
          <button
            className="destroy"
            onClick={[Function]} />
        </div>
        <input
          autoFocus={true}
          className="edit"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyDown={[Function]}
          value="test1" />
      </li>
      <li
        className="">
        <div
          className="view">
          <input
            checked={false}
            className="toggle"
            onChange={[Function]}
            type="checkbox" />
          <label
            onDoubleClick={[Function]}>
            test0
          </label>
          <button
            className="destroy"
            onClick={[Function]} />
        </div>
      </li>
    </ul>
  </section>
  <footer
    id="footer">
    <span
      id="noun-count">
      <strong>
        2
      </strong>
       items left
    </span>
  </footer>
</div>
`;

exports[`AppContainer renders nouns that are complete 1`] = `
<div>
  <header
    id="header">
    <h1>
      nouns
    </h1>
    <input
      autoFocus={true}
      id="new-noun"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="What needs to be done?"
      value="" />
  </header>
  <section
    id="main">
    <input
      checked=""
      id="toggle-all"
      onChange={[Function]}
      type="checkbox" />
    <label
      htmlFor="toggle-all">
      Mark all as complete
    </label>
    <ul
      id="noun-list">
      <li
        className="">
        <div
          className="view">
          <input
            checked={false}
            className="toggle"
            onChange={[Function]}
            type="checkbox" />
          <label
            onDoubleClick={[Function]}>
            test3
          </label>
          <button
            className="destroy"
            onClick={[Function]} />
        </div>
      </li>
      <li
        className="completed">
        <div
          className="view">
          <input
            checked={true}
            className="toggle"
            onChange={[Function]}
            type="checkbox" />
          <label
            onDoubleClick={[Function]}>
            test2
          </label>
          <button
            className="destroy"
            onClick={[Function]} />
        </div>
      </li>
      <li
        className="completed">
        <div
          className="view">
          <input
            checked={true}
            className="toggle"
            onChange={[Function]}
            type="checkbox" />
          <label
            onDoubleClick={[Function]}>
            test1
          </label>
          <button
            className="destroy"
            onClick={[Function]} />
        </div>
      </li>
      <li
        className="">
        <div
          className="view">
          <input
            checked={false}
            className="toggle"
            onChange={[Function]}
            type="checkbox" />
          <label
            onDoubleClick={[Function]}>
            test0
          </label>
          <button
            className="destroy"
            onClick={[Function]} />
        </div>
      </li>
    </ul>
  </section>
  <footer
    id="footer">
    <span
      id="noun-count">
      <strong>
        2
      </strong>
       items left
    </span>
    <button
      id="clear-completed"
      onClick={undefined}>
      Clear completed (
      2
      )
    </button>
  </footer>
</div>
`;

exports[`AppContainer renders some nouns 1`] = `
<div>
  <header
    id="header">
    <h1>
      nouns
    </h1>
    <input
      autoFocus={true}
      id="new-noun"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="What needs to be done?"
      value="" />
  </header>
  <section
    id="main">
    <input
      checked=""
      id="toggle-all"
      onChange={[Function]}
      type="checkbox" />
    <label
      htmlFor="toggle-all">
      Mark all as complete
    </label>
    <ul
      id="noun-list">
      <li
        className="">
        <div
          className="view">
          <input
            checked={false}
            className="toggle"
            onChange={[Function]}
            type="checkbox" />
          <label
            onDoubleClick={[Function]}>
            World!
          </label>
          <button
            className="destroy"
            onClick={[Function]} />
        </div>
      </li>
      <li
        className="">
        <div
          className="view">
          <input
            checked={false}
            className="toggle"
            onChange={[Function]}
            type="checkbox" />
          <label
            onDoubleClick={[Function]}>
            Hello
          </label>
          <button
            className="destroy"
            onClick={[Function]} />
        </div>
      </li>
    </ul>
  </section>
  <footer
    id="footer">
    <span
      id="noun-count">
      <strong>
        2
      </strong>
       items left
    </span>
  </footer>
</div>
`;

exports[`AppContainer renders with no nouns 1`] = `
<div>
  <header
    id="header">
    <h1>
      nouns
    </h1>
    <input
      autoFocus={true}
      id="new-noun"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="What needs to be done?"
      value="" />
  </header>
</div>
`;
